<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#444444"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/mytabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OngletsBiblio"
            android:background="@color/colorMovieBlue"
            app:tabMode="fixed"
            app:tabGravity="fill"/>
    </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/text_noConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/no_connection"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_noResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/no_result"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_cliqueLoupe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/cliqueLoupe"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="15sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:itemCount="30"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>